<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/botaoVoltar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/cadastroHeading"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/intro_text"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/cadastroHeading"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:text="@string/cadastro_heading_text"
        android:inputType="text"
        android:autofillHints="name"
        android:textColor="@color/orange"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/labelNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/cadastroHeading"
        android:text="@string/text_nome"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="12dp"
        android:textSize="20sp"
        android:hint="@string/hint_text"
        android:layout_below="@id/labelNome"
        android:inputType="text"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/nomeEditText"
        android:hint="@string/hint_text"
        android:text="@string/text_email"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:autofillHints="emailAddress"
        android:layout_height="60dp"
        android:layout_below="@id/labelEmail"
        android:hint="@string/hint_text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/labelSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/emailEditText"
        android:text="Sexo:"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerSexo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/labelSexo"
        android:padding="10dp" />

    <TextView
        android:id="@+id/labelEscolaridade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/spinnerSexo"
        android:text="@string/label_text_escolaridade"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerEscolaridade"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/labelEscolaridade"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        style="@android:style/Widget.Button"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/orange_button_bg"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"/>


</RelativeLayout>